--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/scss/style.css" />
   </head>
   <body>
-    <script src="js/script.js/"></script>
+    <h1>Tic Tac Toe</h1>
+    <main class="main">
+      <div class="message"></div>
+      <div class="board">
+        <div class="field f1"></div>
+        <div class="field f2"></div>
+        <div class="field f3"></div>
+        <div class="field f4"></div>
+        <div class="field f5"></div>
+        <div class="field f6"></div>
+        <div class="field f7"></div>
+        <div class="field f8"></div>
+        <div class="field f9"></div>
+      </div>
+    </main>
+    <section><div class="button"></div></section>
+    <footer><p>CheckOut code on my Github</p></footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
