--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <main class="main">
       <div class="message"></div>
       <div class="board">
-        <div class="field f1"></div>
-        <div class="field f2"></div>
-        <div class="field f3"></div>
-        <div class="field f4"></div>
-        <div class="field f5"></div>
-        <div class="field f6"></div>
-        <div class="field f7"></div>
-        <div class="field f8"></div>
-        <div class="field f9"></div>
+        <div class="field f1">d</div>
+        <div class="field f2">d</div>
+        <div class="field f3">d</div>
+        <div class="field f4">d</div>
+        <div class="field f5">d</div>
+        <div class="field f6">d</div>
+        <div class="field f7">d</div>
+        <div class="field f8">d</div>
+        <div class="field f9">d</div>
       </div>
     </main>
     <section><div class="button"></div></section>
