--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="/scss/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
     <main class="main">
       <div class="message"></div>
       <div class="board">
-        <div class="field f1">d</div>
-        <div class="field f2">d</div>
-        <div class="field f3">d</div>
-        <div class="field f4">d</div>
-        <div class="field f5">d</div>
-        <div class="field f6">d</div>
-        <div class="field f7">d</div>
-        <div class="field f8">d</div>
-        <div class="field f9">d</div>
+        <div class="field f1"></div>
+        <div class="field f2"></div>
+        <div class="field f3"></div>
+        <div class="field f4"></div>
+        <div class="field f5"></div>
+        <div class="field f6"></div>
+        <div class="field f7"></div>
+        <div class="field f8"></div>
+        <div class="field f9"></div>
       </div>
     </main>
-    <section><div class="button"></div></section>
+    <section>
+      <div class="button">
+        <button type="button">Reset</button>
+        <button type="button">Start</button>
+      </div>
+    </section>
     <footer><p>CheckOut code on my Github</p></footer>
     <script src="js/script.js"></script>
   </body>
