--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <main class="main">
-      <div class="message"></div>
+      <div class="message"><p class="msg"></p></div>
       <div class="board">
         <div class="field f1"></div>
         <div class="field f2"></div>
