js: make a function to update scores of each player

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h1>Tic Tac Toe</h1>
     <main class="main">
       <div class="message"><p class="msg"></p></div>
+      <div class="score">
+        <p id="player1Score">Player 1 score:</p>
+        <p id="player2Score"></p>
+      </div>
       <div class="board">
         <div class="field f1"></div>
         <div class="field f2"></div>
@@ -31,7 +35,7 @@
     </main>
     <section>
       <div class="button">
-        <button type="button">Reset</button>
+        <button type="button" class="reset">Reset</button>
       </div>
     </section>
     <footer><p>CheckOut code on my Github</p></footer>
