--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       </div>
     </main>
     <section>
-      <div class="button">
+      <div class="buttons">
         <button type="button" class="reset">Reset</button>
+        <button type="button" class="playagain">Play Again</button>
       </div>
     </section>
     <footer><p>CheckOut code on my Github</p></footer>
