css: fix some css issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="main">
       <div class="message"><p class="msg"></p></div>
       <div class="score">
-        <p id="player1Score">Player 1 score:</p>
+        <p id="player1Score"></p>
         <p id="player2Score"></p>
       </div>
       <div class="board">
