add link to github account

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <button type="button" class="playagain">Play Again</button>
       </div>
     </section>
-    <footer><p>CheckOut code on my Github</p></footer>
+    <footer>
+      <p>
+        CheckOut code on my Github:<a href="https://github.com/">@a-sha0234</a>
+      </p>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
